          - config tool:
            - preserve inline comments if possible
            - added enable/disable actions
            - show forward references on ref page too
            - fix computed config display of additive inheritance
          - Bug Fixes
            - fixed sending commands to all backends
            - usability improvements for Internet Explorer

1.56     Wed Nov  7 22:14:06 CET 2012
          - added naglint tool to beautify nagios config files
          - added sites panel when grouping backends by section
          - show perf bar for percentages too
          - reports:
            - replace links in html reports
            - fixed creating e-mail reports for availability pages
            - fixed sending first e-mail attachment always as report.pdf
          - config tool:
            - added object browser
            - show warning when saving objects without a name
            - recognize disabled (commented) objects
          - Bug Fixes
            - fixed limit to groups in alert summary

1.54     Mon Oct 22 15:08:26 CEST 2012
          - added support for setting custum variables without _ now
          - added link to all services with same name on extinfo 2 page
          - panorama view:
            - added performance bar to host/service list
          - Bug Fixes
            - undefined ARG macros will be replaced with empty string
            - fixed perf bars in IE
            - fixed perf bars growing over maximum

1.52     Tue Oct  9 16:44:04 CEST 2012
          - added cookie based authentication and logout button
          - added performance bar to host/service list
          - updated calendar popup
            - use mousewheel to change date / time
          - Bug Fixes
            - fixed scrolling to top on clicking calendar icon

1.50     Thu Sep 27 09:21:20 CEST 2012
          - make menu sections foldable
          - Bug Fixes
            - fixed reload in IE
            - fixed minemap header in IE
